--- a/Python_notebook/DB_Insert.ipynb
+++ b/Python_notebook/DB_Insert.ipynb
@@ -37,7 +37,7 @@
     "from cassandra.auth import PlainTextAuthProvider\n",
     "from cassandra.concurrent import execute_concurrent_with_args\n",
     "cloud_config1 = {\n",
-    "        'secure_connect_bundle': 'secure-connect-capstone-project.zip'\n",
+    "        'secure_connect_bundle': '../secure-connect-capstone-project.zip'\n",
     "}\n",
     "auth_provider1 = PlainTextAuthProvider('JJvGOjuOPszNbfeoOwEinlHI', 'ZM-OR5KZAIMzqksmn01xobmZW4cNRUiIft0SnYuhW966f++ILhp+2Mq,AErDqKAF7Y0AF4ReSYLjTCgsLCqRJiL3+8uxJMoS-K6qMtM1vEmgi5IT5c62OvBJkhxBzq5T')\n",
     "cluster1 = Cluster(cloud=cloud_config1, auth_provider=auth_provider1)\n",
@@ -45,7 +45,7 @@
     "session1 = cluster1.connect('iac689')\n",
     "\n",
     "cloud_config2= {\n",
-    "        'secure_connect_bundle': 'secure-connect-capstone-project2.zip'\n",
+    "        'secure_connect_bundle': '../secure-connect-capstone-project2.zip'\n",
     "}\n",
     "auth_provider2 = PlainTextAuthProvider('OZTxZCgzatSukjKBoWpZimZs', 'cfph4pZMPt-REY_B0BTCZ-qxZfwgpIeZA2T69DIzccYlZ2I1+8gKKk6Ruk+G+70.CyFNoZymWef1Eo1KJZk,SjYbo9SgRZwY97JfG6J8uFLvNEJ8,nCjMbcGz.wgmlJC')\n",
     "cluster2 = Cluster(cloud=cloud_config2, auth_provider=auth_provider2)\n",
@@ -10983,6 +10983,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
